finished CRUD operations, OAuth with Google, and testing
