# routes/userRoutes.js
@@ -1,0 +1,5 @@
+const router = require('express').Router();
+const userController = require('../controllers/userController');
+router.get('/', userController.getAllUsers);
+router.get('/:id', userController.getUserById);
+module.exports = router;
